--- a/index1.html
+++ b/index1.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   
-    <title>
-    
-    </title>
+    <title>Hello ECOM!</title>
 </head>
-<title>Hellow to Ecom</title>
 
 <body>
     
-    Hellow Ecom
+    <br></br>
+    <br />
+
+    <h1 style="color:rgb(255, 217, 0)">hello ECOM</h1>
+    <h2 style="color:rgb(85, 0, 255)">hello ECOM</h2>
+    <h3 style="color:rgb(0, 4, 255)">hello ECOM</h3>
+    <h4 style="background-color: rgb(43, 226, 76);" color:red >hello ECOM</h4>
+    <h5>hello ECOM</h5>
+    <h6><u>hello ECOM</u></h6>
 
 </body>
+
 </html>
